[gd_scene load_steps=10 format=2]

[ext_resource path="res://actors/actions/DialogueAction.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/Interfaces/menu_principal/main_menu.gd" type="Script" id=2]
[ext_resource path="res://ui/Buttons/Back.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/containers/Placeholder_540-540_dos.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/GaramondPremrPro-Smbd.otf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 540, 540 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 105
font_data = ExtResource( 4 )

[node name="main_menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.380392, 0.466667, 0.490196, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -270.0
margin_right = 480.0
margin_bottom = 270.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NoDatFound" type="Node" parent="."]

[node name="DialogueAction" parent="NoDatFound" instance=ExtResource( 1 )]

[node name="Buttons" type="Node2D" parent="."]

[node name="Back" parent="Buttons" instance=ExtResource( 3 )]
margin_left = 50.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 200.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.365
anchor_right = 0.5
anchor_bottom = 0.365
margin_left = -457.811
margin_top = -88.0375
margin_right = 459.189
margin_bottom = 100.963
custom_fonts/font = SubResource( 3 )
text = "No se han encontrado datos guardados en el teléfono, presiona el siguiente botón para iniciar un nuevo juego."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -56.0
margin_right = 192.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
